# x-sentiment-radar

./: .gitignore  README.md  pyproject.toml
config/: settings.example.toml
docs/superpowers/plans/: 2026-04-07-polymarket-x-cross-signal.md
docs/superpowers/specs/: 2026-04-07-polymarket-x-cross-signal-design.md
frontend/: app.js  index.html  styles.css
scripts/: install-cross-signal-cron.sh  open-cross-signal-dashboard.sh  prime-cross-signal-state.sh  review-all-breaking-now.sh  run-cross-signal-grok.sh  run-xhunt-free.sh  serve-cross-signal-dashboard.py  uninstall-cross-signal-cron.sh
src/twitter_ops_agent/: __init__.py  cli.py  config.py  doctor.py
src/twitter_ops_agent/discovery/: __init__.py  attentionvc.py  polymarket.py  xhunt.py
src/twitter_ops_agent/domain/: __init__.py  models.py
src/twitter_ops_agent/events/: __init__.py  linker.py
src/twitter_ops_agent/filter/: __init__.py  track.py
src/twitter_ops_agent/research/: __init__.py  browser_x_client.py  crowd_context.py  twscrape_client.py
src/twitter_ops_agent/storage/: __init__.py  repository.py  schema.py
tests/: test_attentionvc_discovery.py  test_browser_x_client.py  test_cli.py  test_config.py  test_crowd_context.py  test_doctor.py  test_polymarket_discovery.py  test_twscrape_client.py  test_xhunt_discovery.py
tests/v2/: test_cross_signal_gate.py  test_cross_signal_orchestrator.py  test_crowd_sense_agent.py  test_grok_cross_signal_gate.py  test_hydration_agent.py  test_orchestrator.py  test_output_notes.py  test_priority_gate.py  test_publisher.py  test_topic_scout.py
(+19 files in other folders)
