[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x-sentiment-radar"
version = "0.1.0"
description = "Sentiment-first X topic radar for AI and Crypto operators."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
twitter-ops-agent = "twitter_ops_agent.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
